--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-vue": "^10.3.0",
     "globals": "^16.2.0",
     "vite": "^7.0.4",
     "vite-plugin-static-copy": "^3.1.0"
