--- a/package.json
+++ b/package.json
@@ -2,23 +2,50 @@
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
+  "description": "A frontend project using Vite",
+  "keywords": [
+    "frontend",
+    "vite",
+    "vue",
+    "JavaScript"
+  ],
   "type": "module",
   "scripts": {
+    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint .",
+    "start": "vite"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.7.2",
-    "@stripe/stripe-js": "^7.4.0",
-    "crypto": "^1.0.1",
-    "lodash.isequal": "^4.5.0"
+    "@stripe/stripe-js": "7.4.0",
+    "crypto": "1.0.1",
+    "lodash.isequal": "4.5.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.29.0",
-    "eslint": "^9.29.0",
-    "eslint-plugin-vue": "^10.3.0",
-    "globals": "^16.2.0",
-    "vite": "^7.0.4",
-    "vite-plugin-static-copy": "^3.1.0"
-  }
+    "@eslint/js": "9.29.0",
+    "@vitejs/plugin-react": "latest",
+    "eslint": "9.29.0",
+    "eslint-plugin-vue": "10.3.0",
+    "globals": "16.2.0",
+    "vite": "7.0.4",
+    "vite-plugin-static-copy": "3.1.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jpwiggins/vibeeditor-frontend.git"
+  },
+  "license": "MIT",
+  "contributors": [
+    {
+      "name": "jpwiggins",
+      "url": "https://github.com/jpwiggins"
+    }
+  ]
 }
