--- a/package.json
+++ b/package.json
@@ -21,19 +21,23 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
-    "@stripe/stripe-js": "7.4.0",
+    "@stripe/stripe-js": "^7.4.0",
     "crypto": "1.0.1",
     "lodash.isequal": "4.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "react-select": "^5.10.2"
   },
   "devDependencies": {
     "@eslint/js": "9.29.0",
     "@vitejs/plugin-react": "latest",
+    "autoprefixer": "^10.4.21",
     "eslint": "9.29.0",
     "eslint-plugin-vue": "10.3.0",
     "globals": "16.2.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "vite": "7.0.4",
     "vite-plugin-static-copy": "3.1.0"
   },
